docs: Clarify steps for new users
- Highlight the RDM Hybrid Setup on many pages
- Callout Flygon/Golbat endpoint for MITM clients
- Put database & services inside docker network. Makes things "just work" and likely best pratice for most users with limited docker knowledge.

--- a/pages/docs/other/database.mdx
+++ b/pages/docs/other/database.mdx
@@ -30,6 +30,10 @@ services:
 volumes:
   data:
     driver: local
+
+networks:
+  default:
+    name: scanner
 ```
 
 Once the service is up, you will need to connect to the database service with [TablePlus](https://tableplus.com/), [Workbench](https://www.mysql.com/products/workbench/), Command Line, etc.
