--- a/pages/docs/setup/standard.mdx
+++ b/pages/docs/setup/standard.mdx
@@ -3,7 +3,9 @@ import { Callout } from 'nextra-theme-docs'
 # Standard
 
 <Callout type="warning" emoji="⚠️">
-  Some of these steps will fail since Flygon is not public yet!
+  Flygon is not public yet!
+
+  If you wish to continue the setup process you can skip the Flygon install, build, and run steps. The [Hybrid Setup](/docs/other/hybrid-setup) will allow you to continue using RealDeviceMap (RDM) to control your devices while sending data to Golbat for processing.
 </Callout>
 
 ## Prerequisites
