--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -25,15 +25,16 @@ Each service is incredibly customizable and highly optimized. The services are w
 Some of our highlighted features:
 
 - Advanced Ditto detection
-- Advanced IV, shiny, hundo, & nundo statistics
-- Gym
+- Gym parsing
 - In Memory Pokemon Cache
-- Invasions
-- Pokemon
-- Pokestop
+- Invasions line-up parsing
+- IV, shiny, hundo, & nundo statistics
+- Pokemon parsing
+- Pokestop parsing
 - PVP calculation
-- Quest
-- Webhook
+- Quest parsing
+- Routes parsing
+- Webhook processing
 - and more!
 
 ## Still interested?
