--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,10 +1,4 @@
-import { Callout } from "nextra-theme-docs";
-
 # Welcome to Unown#
-
-<Callout type="warning" emoji="⚠️">
-  We are still in the development stage; there might be bugs, and some features are **missing**.
-</Callout>
 
 We are a passionate group of developers working on a mapping project for Pokémon Go. While just getting started, we wanted to open things up to start getting feedback from the community!
 
@@ -20,9 +14,9 @@ We wanted to try something new, and the early results have been promising. The c
 
 ## Features
 
-Each service is incredibly customizable and highly optimized. The services are written in the Go programming language, providing a great developer experience, excellent concurrency, great memory management, fast HTTP handling, and more. Additionally, our design uses micro-services which allows for significant flexibility. We have you covered if you need to split services between multiple servers.
+Each service is incredibly customizable and highly optimized. The core services are written in Go, providing a great developer experience, excellent concurrency, great memory management, fast HTTP handling, and more. Additionally, our design uses micro-services which allows for significant flexibility. We have you covered if you need to split services between multiple servers.
 
-Some of our highlighted features:
+Some of highlighted features:
 
 - Advanced Ditto detection
 - Gym parsing
@@ -35,7 +29,6 @@ Some of our highlighted features:
 - Quest parsing
 - Routes parsing
 - Webhook processing
-- and more!
 
 ## Still interested?
 
