docs: Flygon to Dragonite
RIP Flygon you were taken too soon

--- a/pages/docs/dragonite/config.mdx
+++ b/pages/docs/dragonite/config.mdx
@@ -1,6 +1,6 @@
 import { Callout } from 'nextra-theme-docs'
 
-# Flygon Configuration
+# Dragonite Configuration
 
 <Callout type="info" emoji="🚧">
   This page is still under construction
