--- a/pages/docs/other/database.mdx
+++ b/pages/docs/other/database.mdx
@@ -1,6 +1,6 @@
 # Database
 
-To use the Unown# services, you will need a database server with two different databases configured. One for **Golbat** and one for **Flygon**.
+To use the Unown# services, you will need a database server with two different databases configured. One for **Golbat** and one for **Dragonite**.
 
 ## Supported
 
@@ -38,7 +38,7 @@ networks:
 
 Once the service is up, you will need to connect to the database service with [TablePlus](https://tableplus.com/), [Workbench](https://www.mysql.com/products/workbench/), Command Line, etc.
 
-1. Create a database for flygon
+1. Create a database for dragonite
 1. Create a database for golbat
 
 ## Optimizing MariaDB
