--- a/pages/docs/other/hybrid-setup.mdx
+++ b/pages/docs/other/hybrid-setup.mdx
@@ -3,7 +3,7 @@ import { Callout } from 'nextra-theme-docs'
 # Hybrid Setup
 
 <Callout type="warning" emoji="⚠️">
-  This temporary solution will not be required once Flygon is production ready.
+  This temporary solution is only required if you are using a legacy client and RealDeviceMap (RDM).
 </Callout>
 
 There are two methods to send data to Golbat while continuing to use the device controller component from RealDeviceMap (RDM). This will allow you take advantage of Golbat's parsing.
