--- a/pages/docs/setup/next-steps.mdx
+++ b/pages/docs/setup/next-steps.mdx
@@ -12,7 +12,7 @@ The [Hybrid Setup](/docs/other/hybrid-setup) will allow you to continue using Re
 
 I know you want me to go setup _yet another_ thing but this is important as Koji helps you visualize and create routes. This will save time down the road. Go check out the [Koji Docs](https://koji.vercel.app).
 
-Now that you have configured the service go modify your **Golbat** and **Flygon** config files.
+Now that you have configured the service go modify your **Golbat** and **Dragonite** config files.
 
 ## Modify MITM client
 
@@ -20,7 +20,7 @@ Now that you have configured the service go modify your **Golbat** and **Flygon*
   If you are using RDM Raw Mirroring you can skip this section.
 </Callout>
 
-Now that services are configured you need to configure devices to send data requests to the correct endpoint. Some MITM clients only allow one endpoint (Atlas) so Flygon can be used to receive all data and then forward the `/raw` data to Golbat.
+Now that services are configured you need to configure devices to send data requests to the correct endpoint. Some MITM clients only allow one endpoint (Atlas) so Dragonite can be used to receive all data and then forward the `/raw` data to Golbat.
 
-- If sending data to Flygon use `http://YOUR_IP:9002/` (assuming default port).
+- If sending data to Dragonite use `http://YOUR_IP:9002/` (assuming default port).
 - If sending data to Golbat you can use `http://YOUR_IP:9001/raw` (assuming default port).
