docs: Start Terminology page

--- a/pages/docs/other/blissey.mdx
+++ b/pages/docs/other/blissey.mdx
@@ -1,6 +1,6 @@
 import { Tabs } from 'nextra/components'
+import { Callout } from 'nextra-theme-docs'
 import Image from 'next/image'
-
 
 # Blissey
 
@@ -22,8 +22,8 @@ The below images are a real instance of Grafana displaying a few of the released
   </Tabs.Tab>
 </Tabs>
 
-## Terminology
+## Setup
 
-* **rpl**: reporting length (period), stored for intervals 5, 15, 60, 1440 and 10080 minutes
-* **numWiEnc**: number of pokemon that initial scanned as wild, lateron encountered
-* **secWiEnc**: sum of seconds between seen wild and encountered
+<Callout type="info" emoji="🚧">
+  This section is under construction
+</Callout>
