--- a/pages/docs/golbat/stats.mdx
+++ b/pages/docs/golbat/stats.mdx
@@ -2,13 +2,15 @@ import Image from 'next/image'
 
 # Statistics
 
-Golbat comes with basic database statistics built in. These tables are named with the `_stats` suffix. From here are are able to use raw SQL queries or hook into a third party visualization tool.
+Golbat comes with basic database statistics built in. These tables are named with the `_stats` suffix. With these tables you can use raw SQL queries or hook into a third party visualization tool to visualize the data that Golbat is parsing.
 
-There is also [Blissey](/docs/blissey) and our [Prometheus](https://github.com/UnownHash/Golbat/pull/100) integration if want to help build with the community.
+[Blissey](/docs/blissey) and our [Prometheus](https://github.com/UnownHash/Golbat/pull/100) integration can be used to get started on visualizing the data.
+
+<br/>
 
 <Image src="https://user-images.githubusercontent.com/52629375/265464011-c2bcee57-834c-4694-b201-fa7524a7a52a.jpg" alt="Performance demo" width={900} height={900} />
 
-## Built in statistic tables
+## Built-in statistic tables
 
 | Table name         |
 |--------------------|
