--- a/pages/docs/dragonite/index.mdx
+++ b/pages/docs/dragonite/index.mdx
@@ -1,12 +1,11 @@
 # Dragonite
 
-[**Dragonite**](https://github.com/UnownHash/Dragonite-Public) is our controller. It receives HTTP requests from Man in the Middle (MITM) clients compatible with RealDeviceMap (RDM) and instructs clients on what to do. In short, it tells the game which accounts to log in with, where to go, and what action to take. Additionally, it can forward data requests to **Golbat** for data processing.
+[**Dragonite**](https://github.com/UnownHash/Dragonite-Public) is our backend controller. This service is used to connect and manage multiple workers. In short, it tells the game which accounts to log in with, where to go, and what action to take.
 
 ## Dragonite-Admin
 
-[**Dragonite-Admin**](https://github.com/UnownHash/Dragonite-Public) is a web front end to interact with Dragonite. Generally speaking, this is a "dumb" service, and if you have an enhancement, it needs to be implemented in **Dragonite** first.
+[**Dragonite-Admin**](https://github.com/UnownHash/Dragonite-Public) is a web front end to interact with Dragonite. Generally speaking this is a proxy service to allow Admin users to interact with the service. With this service you can configure your Areas, Accounts, Routes and schedules.
 
 ## Supported MITM clients
 
-- [Atlas](https://pokemod.dev/) (Android)
 - [Exeggcute/GC](https://jorgschulze73.github.io/gc-docs/) (iOS and Android)
