docs: Yᵒᵘ Oᶰˡʸ Lᶤᵛᵉ Oᶰᶜᵉ commit

--- a/pages/docs/setup/docker.mdx
+++ b/pages/docs/setup/docker.mdx
@@ -3,9 +3,7 @@ import { Callout } from 'nextra-theme-docs'
 # Docker Setup
 
 <Callout type="warning" emoji="⚠️">
-  Dragonite is not public yet!
-
-  If you wish to continue the setup process make sure to comment out or delete the Dragonite service. The [Hybrid Setup](/docs/other/hybrid-setup) will allow you to continue using RealDeviceMap (RDM) to control your devices while sending data to Golbat for processing.
+  Dragonite does not have a docker image yet. Please wait or use the Standard install method.
 </Callout>
 
 ## Prerequisites
