--- a/pages/docs/dragonite/index.mdx
+++ b/pages/docs/dragonite/index.mdx
@@ -2,9 +2,9 @@
 
 Dragonite is **closed source** software. We are releasing compiled binaries to the community with no plans to release the source code. Currently this feels like the correct approach to make sure we are able to maintain this project. If you do not like this decision you are welcome to continue using other alternatives in the market.
 
-[**Dragonite**](https://github.com/UnownHash/Dragonite-Public) is our backend controller. This service is used to connect and manage multiple workers. In short, it tells the game which accounts to log in with, where to go, and what action to take.
+[**Dragonite**](https://github.com/UnownHash/Dragonite-Public) is our backend controller. In short, Dragonite tells the game which accounts to log in with, where to go, and what action you want completed.
 
-[**Dragonite-Admin**](https://github.com/UnownHash/Dragonite-Public) is a web front end to interact with Dragonite. Generally speaking this is a proxy service to allow Admin users to interact with the service. With this service you can configure your Areas, Accounts, Routes and schedules.
+[**Dragonite-Admin**](https://github.com/UnownHash/Dragonite-Public) is a web front end to interact with Dragonite. Generally speaking Dragonite Admin is a proxy service to allow Admin users to interact with backend Dragonite server. With this service you can configure your Areas, Accounts, Routes and schedules.
 
 ## Supported MITM clients
 
