--- a/pages/docs/index.mdx
+++ b/pages/docs/index.mdx
@@ -1,6 +1,14 @@
+import Image from 'next/image'
+
 # Intro
 
 There are two install paths, Docker or Standard. Both options provide an easy and supported way to build your environment. Docker might easier to get started, with the downside being the _"docker abstraction layer"_. Standard setup is better if you plan on developing or testing pull requests.
 
+Make sure to have a functional [Database Setup](/docs/other/database) prior to starting the Unown# installation.
+
 - [Docker](/docs/setup/docker)
 - [Standard](/docs/setup/standard)
+
+## High Level Diagram
+
+<Image src="/images/Unownhash-Services-v2.jpg" alt="Unown# service diagram" width={900} height={900} />
