--- a/pages/docs/setup/docker.mdx
+++ b/pages/docs/setup/docker.mdx
@@ -38,6 +38,7 @@ import { Callout } from 'nextra-theme-docs'
         restart: unless-stopped
         environment:
           ADMIN_GENERAL_HOST: 0.0.0.0
+          ADMIN_GENERAL_PORT: 7273
           ADMIN_GENERAL_USERNAME: admin
           ADMIN_GENERAL_PASSWORD: password
           ADMIN_DRAGONITE_API_ENDPOINT: http://dragonite:7272
@@ -45,8 +46,7 @@ import { Callout } from 'nextra-theme-docs'
           ADMIN_GOLBAT_API_ENDPOINT: http://golbat:9001
           ADMIN_GOLBAT_API_SECRET: golbat1234
         ports:
-          #- '7273:7273' ## Currently broken. See https://github.com/UnownHash/Dragonite-Public/issues/7
-          - '7273:9003' ## Temp bandaid this will most likely change in the future
+          - '7273:7273' # change left one for external port
       golbat:
         image: ghcr.io/unownhash/golbat:main
         container_name: golbat
