docs: Remove extra sentence from proxy section
This should have more details in the Dragonite config page

--- a/pages/docs/setup/next-steps.mdx
+++ b/pages/docs/setup/next-steps.mdx
@@ -16,7 +16,7 @@ Proxies are required if you have more than one or two devices. The positive is y
 
 1. Login to your Dragonite Admin dashboard [http://SERVER_YOUR_IP:7273]() (by default).
 1. Switch to the **Proxies** tab in the sidebar
-1. Add a few http proxies in the following example format. If you have authentication for your proxy use the following
+1. Add a few http proxies in the following format
 
     ```sh
     http://USERNAME:PASSWORD@SERVER_IP_OR_HOSTNAME:PORT
