fix: Add path shortcut

--- a/pages/docs/other/third-party.mdx
+++ b/pages/docs/other/third-party.mdx
@@ -1,4 +1,4 @@
-import { SourceLink } from '../../../components/SourceLink'
+import { SourceLink } from '@/components/SourceLink'
 import Image from 'next/image'
 
 # Third Party
