--- a/pages/docs/golbat/pvp.mdx
+++ b/pages/docs/golbat/pvp.mdx
@@ -1,4 +1,4 @@
-import { SourceLink } from '../../../components/SourceLink'
+import { SourceLink } from '@/components/SourceLink'
 
 # PvP Calculation
 
