fix: Resolve typos, better diagram, & dark mode
honestly idk why I went through the effort of dark mode support for the diagram but it is a tiny quality of life that was low effort to add/maintain

--- a/pages/docs/index.mdx
+++ b/pages/docs/index.mdx
@@ -1,4 +1,4 @@
-import Image from 'next/image'
+import { DiagramImage } from '@/components/DiagramImage'
 
 # Intro
 
@@ -11,4 +11,4 @@ Make sure to have a functional [Database Setup](/docs/other/database) prior to s
 
 ## High Level Diagram
 
-<Image src="/images/Unownhash-Services-v2.jpg" alt="Unown# service diagram" width={900} height={900} />
+<DiagramImage/>
