docs: gRPC + tweak golbat intro

--- a/pages/docs/dragonite/index.mdx
+++ b/pages/docs/dragonite/index.mdx
@@ -24,7 +24,7 @@ Dragonite is **closed source** software. We are releasing compiled binaries to t
 1. Koji integration for hands free route creation
 1. Built in level mode that is fast
 1. Highly scalable, can run 1000+ workers in a single installation
-1. grpc raw send to golbat, can send raws to multiple destinations (including RDM)
+1. gRPC raw send to golbat, can send raws to multiple destinations (including RDM)
 1. Built in prometheus stats, and raw stats table for detailed performance measurements
 1. API support for modifying settings; and a beautiful admin tool
 
