--- a/pages/docs/setup/docker.mdx
+++ b/pages/docs/setup/docker.mdx
@@ -129,7 +129,7 @@ import { Callout } from 'nextra-theme-docs'
 
     > **Note**: this doesn't cover 100% of the configuration just the basics to get you started. We **highly recommend** setting a `raw_bearer` secret if these services are accessible from the public internet.
 
-    Using Golbat's GRPC endpoint (default port 50001) is recommended over the raw endpoint (default 9001).
+    Using Golbat's gRPC endpoint (default port 50001) is recommended over the raw endpoint (default 9001).
 
     ```toml filename="dragonite_config.toml" {2,5,7,9,11-16}
     [rotom]
