docs: Minor blissey notes

--- a/pages/docs/golbat/stats.mdx
+++ b/pages/docs/golbat/stats.mdx
@@ -4,7 +4,7 @@ import Image from 'next/image'
 
 Golbat comes with basic database statistics built in. These tables are named with the `_stats` suffix. With these tables you can use raw SQL queries or hook into a third party visualization tool to visualize the data that Golbat is parsing.
 
-[Blissey](/docs/blissey) and our [Prometheus](https://github.com/UnownHash/Golbat/pull/100) integration can be used to get started on visualizing the data.
+[Blissey](/docs/other/blissey) and our [Prometheus](https://github.com/UnownHash/Golbat/pull/100) integration can be used to get started on visualizing the data.
 
 <br/>
 
