--- a/pages/docs/other/blissey.mdx
+++ b/pages/docs/other/blissey.mdx
@@ -4,7 +4,7 @@ import Image from 'next/image'
 
 # Blissey
 
-[**Blissey**](https://github.com/UnownHash/Blissey) processes reporting data from Golbat into separate database tables for visualization in [Grafana](https://grafana.com/).
+[**Blissey**](https://github.com/UnownHash/Blissey) processes reporting data from Golbat and Dragonite into separate database tables for visualization in [Grafana](https://grafana.com/).
 
 ## Showcase
 
@@ -24,6 +24,4 @@ The below images are a real instance of Grafana displaying a few of the released
 
 ## Setup
 
-<Callout type="info" emoji="🚧">
-  This section is under construction
-</Callout>
+The setup process for Blissey is documented in the project README on [GitHub](https://github.com/UnownHash/Blissey).
