docs: Yarn no longer required can use npm

--- a/pages/docs/setup/standard.mdx
+++ b/pages/docs/setup/standard.mdx
@@ -7,7 +7,7 @@ import { Callout } from 'nextra-theme-docs'
 - [Go 1.21](https://go.dev/doc/install)
 - [Node 18](https://nodejs.org/en/download)
 - [Git](https://git-scm.com/downloads) _(`git` might be pre-installed)_
-- [PM2](https://pm2.io/docs/runtime/guide/installation/) `yarn global add pm2`
+- [PM2](https://pm2.io/docs/runtime/guide/installation/) `npm install -g pm2` or `yarn global add pm2`
 - [jq](https://jqlang.github.io/jq/download/) `sudo apt-get install jq`
 - Compatible Database - See [Database Setup](/docs/other/database)
 
