--- a/pages/docs/golbat/config.mdx
+++ b/pages/docs/golbat/config.mdx
@@ -2,6 +2,126 @@ import { Callout } from 'nextra-theme-docs'
 
 # Golbat Configuration
 
+This documentation outlines all available configuration keys for Golbat. It is important to note that the presence of a configuration key does not necessitate its specification in your `config.toml` file. The advised approach is to start with the standard configuration file from the repository. Only append additional keys to this base file if there is a need to alter Golbat's default operational parameters.
+
 <Callout type="info" emoji="🚧">
   This page is still under construction
 </Callout>
+
+## Root Section
+
+```toml
+port = 9001                  # Listening port for golbat
+#grpc_port = 50001           # Listening port for gRPC.
+raw_bearer = ""              # Raw bearer (password) required
+api_secret = "golbat"        # Golbat secret required on api calls (blank for none)
+pokemon_memory_only = false  # Use in-memory storage for pokemon only. This only disabled Golbat from writing to the Pokemon Table. The in memory tracking is always enabled.
+```
+
+## Koji Section
+
+```toml
+[koji]
+url = "http://{koji_url}/api/v1/geofence/feature-collection/{golbat_project}"
+bearer_token = "secret"
+```
+
+## Cleanup Section
+
+```toml
+[cleanup]
+pokemon = true          # Keep pokemon table is kept nice and short
+incidents = true        # Remove incidents after expiry
+quests = true           # Remove quests after expiry
+stats = true            # Enable/Disable stats history
+stats_days = 7          # Remove entries from ["pokemon_stats", "pokemon_shiny_stats", "pokemon_iv_stats", "pokemon_hundo_stats", "pokemon_nundo_stats" after x days
+device_hours = 24       # Remove devices from in memory after not seen for x hours
+```
+
+## Logging Section
+
+```toml
+[logging]
+debug = false
+save_logs = true
+max_size = 50           # Size in MB
+max_backups = 10        # Amount of files to keep
+max_age = 30            # Day(s) to keep files
+compress = true         # Compress to gz archive
+```
+
+## Database section
+
+```toml
+[database]
+user = ""                  # Database username
+password = ""              # Database password
+address = "127.0.0.1:3306" # Address with port for the database
+db = ""                    # Database table name
+max_pool = 100             # Max pool connection to allocate to the database
+```
+
+## PVP Section
+
+```toml
+[pvp]
+enabled = true
+include_hundos_under_cap = false
+```
+
+## Scan Rules Section
+
+**⭐ Advanced Option ⭐**
+
+With Scan Rules you can modify the behavior globally for all areas or for specific areas using
+
+```toml
+[[scan_rules]]
+wild_pokemon = false   # disables Pokémon without iv from the gmo (waits for encounter)
+nearby_pokemon = false # disables cell/pokestop Pokémon
+
+# insert example for a specific area
+```
+
+## Sentry Section
+
+## Pyroscope Section
+
+## Test Fort In Memory Section
+
+## Tuning Section
+
+**⭐ Advanced Option ⭐**
+
+```toml
+extended_timeout = true
+max_pokemon_results = 3000
+```
+
+## Prometheus Section
+
+```toml
+[prometheus]
+enabled = false  # Enable or disable the Prometheus endpoint for external reporting
+```
+
+## Webhook section
+
+You can specify more than one webhook destination by including the [[webhooks]] section multiple times. The hook types can optionally be filtered by using the types array
+
+```toml
+[[webhooks]]
+url = "http://localhost:4201"
+# types if specified can be...
+# types = ["pokemon", "pokemon_iv", "pokemon_no_iv", "gym", "invasion", "quest", "pokestop", "raid", "weather", "fort_update"]
+# "pokemon" includes both with ivs and without. "pokemon_iv" will only be encountered pokemon. "pokemon_no_iv" may be nearby pokemon that have not been encountered (yet).
+
+#[[webhooks]]
+#url = "http://localhost:4202"
+#types = ["raid"]
+
+#[[webhooks]]
+#url = "http://localhost:4202"
+#types = ["raid"]
+#areas = ["London/*", "*/Harrow", "Harrow"]
+```
